trabalho2/LF3-enunciado/ParLF.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from ParLF.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pFunction -> Function                       (1)
	%start_pDecl -> Decl                               (2)
	%start_pListFunction -> ListFunction               (3)
	%start_pListDecl -> ListDecl                       (4)
	%start_pListExp -> ListExp                         (5)
	%start_pListIdent -> ListIdent                     (6)
	%start_pListType -> ListType                       (7)
	%start_pExp -> Exp                                 (8)
	%start_pExp1 -> Exp1                               (9)
	%start_pExp2 -> Exp2                               (10)
	%start_pExp3 -> Exp3                               (11)
	%start_pExp4 -> Exp4                               (12)
	%start_pExp5 -> Exp5                               (13)
	%start_pExp6 -> Exp6                               (14)
	%start_pExp7 -> Exp7                               (15)
	%start_pType -> Type                               (16)
	Ident -> L_Ident                                   (17)
	Integer -> L_integ                                 (18)
	String -> L_quoted                                 (19)
	Program -> ListFunction                            (20)
	Function -> Type Ident '(' ListDecl ')' '{' Exp '}'   (21)
	Decl -> Type Ident                                 (22)
	ListFunction ->                                    (23)
	ListFunction -> Function ListFunction              (24)
	ListDecl ->                                        (25)
	ListDecl -> Decl                                   (26)
	ListDecl -> Decl ',' ListDecl                      (27)
	ListExp ->                                         (28)
	ListExp -> Exp                                     (29)
	ListExp -> Exp ',' ListExp                         (30)
	ListIdent -> Ident                                 (31)
	ListIdent -> Ident ',' ListIdent                   (32)
	ListType ->                                        (33)
	ListType -> Type                                   (34)
	ListType -> Type '->' ListType                     (35)
	Exp -> '<' Exp '.' Exp '>'                         (36)
	Exp -> 'lambda' ListDecl '->' Exp                  (37)
	Exp -> 'if' '(' Exp ')' 'then' Exp 'else' Exp      (38)
	Exp -> Exp1                                        (39)
	Exp1 -> Exp1 '||' Exp2                             (40)
	Exp1 -> Exp2                                       (41)
	Exp2 -> Exp2 '&&' Exp3                             (42)
	Exp2 -> Exp3                                       (43)
	Exp3 -> '!' Exp3                                   (44)
	Exp3 -> Exp4                                       (45)
	Exp4 -> Exp4 '++' Exp5                             (46)
	Exp4 -> Exp4 '+' Exp5                              (47)
	Exp4 -> Exp4 '-' Exp5                              (48)
	Exp4 -> Exp5                                       (49)
	Exp5 -> Exp5 '*' Exp6                              (50)
	Exp5 -> Exp5 '/' Exp6                              (51)
	Exp5 -> Exp6                                       (52)
	Exp6 -> Exp7 '(' ListExp ')'                       (53)
	Exp6 -> Exp7                                       (54)
	Exp7 -> Integer                                    (55)
	Exp7 -> Ident                                      (56)
	Exp7 -> String                                     (57)
	Exp7 -> 'true'                                     (58)
	Exp7 -> 'false'                                    (59)
	Exp7 -> '(' Exp ')'                                (60)
	Type -> 'bool'                                     (61)
	Type -> 'int'                                      (62)
	Type -> 'String'                                   (63)
	Type -> '(' Type ',' ListType ')'                  (64)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'.'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'>'            { PT _ (TS _ 14) }
	'String'       { PT _ (TS _ 15) }
	'bool'         { PT _ (TS _ 16) }
	'else'         { PT _ (TS _ 17) }
	'false'        { PT _ (TS _ 18) }
	'if'           { PT _ (TS _ 19) }
	'int'          { PT _ (TS _ 20) }
	'lambda'       { PT _ (TS _ 21) }
	'then'         { PT _ (TS _ 22) }
	'true'         { PT _ (TS _ 23) }
	'{'            { PT _ (TS _ 24) }
	'||'           { PT _ (TS _ 25) }
	'}'            { PT _ (TS _ 26) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pFunction rule  1
	%start_pDecl    rule  2
	%start_pListFunction rule  3
	%start_pListDecl rule  4
	%start_pListExp rule  5
	%start_pListIdent rule  6
	%start_pListType rule  7
	%start_pExp     rule  8
	%start_pExp1    rule  9
	%start_pExp2    rule  10
	%start_pExp3    rule  11
	%start_pExp4    rule  12
	%start_pExp5    rule  13
	%start_pExp6    rule  14
	%start_pExp7    rule  15
	%start_pType    rule  16
	Ident           rule  17
	Integer         rule  18
	String          rule  19
	Program         rule  20
	Function        rule  21
	Decl            rule  22
	ListFunction    rules 23, 24
	ListDecl        rules 25, 26, 27
	ListExp         rules 28, 29, 30
	ListIdent       rules 31, 32
	ListType        rules 33, 34, 35
	Exp             rules 36, 37, 38, 39
	Exp1            rules 40, 41
	Exp2            rules 42, 43
	Exp3            rules 44, 45
	Exp4            rules 46, 47, 48, 49
	Exp5            rules 50, 51, 52
	Exp6            rules 53, 54
	Exp7            rules 55, 56, 57, 58, 59, 60
	Type            rules 61, 62, 63, 64

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23
	%eof           reduce using rule 23

	Program        goto state 65
	Function       goto state 60
	ListFunction   goto state 66
	Type           goto state 62

State 1

	%start_pFunction -> . Function                      (rule 1)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23

	Function       goto state 64
	Type           goto state 62

State 2

	%start_pDecl -> . Decl                              (rule 2)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23

	Decl           goto state 63
	Type           goto state 59

State 3

	%start_pListFunction -> . ListFunction              (rule 3)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23
	%eof           reduce using rule 23

	Function       goto state 60
	ListFunction   goto state 61
	Type           goto state 62

State 4

	%start_pListDecl -> . ListDecl                      (rule 4)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23
	%eof           reduce using rule 25

	Decl           goto state 57
	ListDecl       goto state 58
	Type           goto state 59

State 5

	%start_pListExp -> . ListExp                        (rule 5)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'<'            shift, and enter state 48
	'false'        shift, and enter state 29
	'if'           shift, and enter state 49
	'lambda'       shift, and enter state 50
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32
	%eof           reduce using rule 28

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	ListExp        goto state 55
	Exp            goto state 56
	Exp1           goto state 47
	Exp2           goto state 45
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 6

	%start_pListIdent -> . ListIdent                    (rule 6)

	L_Ident        shift, and enter state 18

	Ident          goto state 53
	ListIdent      goto state 54

State 7

	%start_pListType -> . ListType                      (rule 7)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23
	%eof           reduce using rule 33

	ListType       goto state 51
	Type           goto state 52

State 8

	%start_pExp -> . Exp                                (rule 8)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'<'            shift, and enter state 48
	'false'        shift, and enter state 29
	'if'           shift, and enter state 49
	'lambda'       shift, and enter state 50
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp            goto state 46
	Exp1           goto state 47
	Exp2           goto state 45
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 9

	%start_pExp1 -> . Exp1                              (rule 9)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp1           goto state 44
	Exp2           goto state 45
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 10

	%start_pExp2 -> . Exp2                              (rule 10)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp2           goto state 42
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 11

	%start_pExp3 -> . Exp3                              (rule 11)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp3           goto state 39
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 12

	%start_pExp4 -> . Exp4                              (rule 12)

	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp4           goto state 37
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 13

	%start_pExp5 -> . Exp5                              (rule 13)

	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp5           goto state 35
	Exp6           goto state 36
	Exp7           goto state 34

State 14

	%start_pExp6 -> . Exp6                              (rule 14)

	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp6           goto state 33
	Exp7           goto state 34

State 15

	%start_pExp7 -> . Exp7                              (rule 15)

	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp7           goto state 27

State 16

	%start_pType -> . Type                              (rule 16)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23

	Type           goto state 19

State 17

	Ident -> . L_Ident                                  (rule 17)

	L_Ident        shift, and enter state 18


State 18

	Ident -> L_Ident .                                  (rule 17)

	'&&'           reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	'*'            reduce using rule 17
	'+'            reduce using rule 17
	'++'           reduce using rule 17
	','            reduce using rule 17
	'-'            reduce using rule 17
	'->'           reduce using rule 17
	'.'            reduce using rule 17
	'/'            reduce using rule 17
	'>'            reduce using rule 17
	'else'         reduce using rule 17
	'||'           reduce using rule 17
	'}'            reduce using rule 17
	%eof           reduce using rule 17


State 19

	%start_pType -> Type .                              (rule 16)

	%eof           accept


State 20

	Type -> '(' . Type ',' ListType ')'                 (rule 64)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23

	Type           goto state 87

State 21

	Type -> 'String' .                                  (rule 63)

	')'            reduce using rule 63
	','            reduce using rule 63
	'->'           reduce using rule 63
	L_Ident        reduce using rule 63
	%eof           reduce using rule 63


State 22

	Type -> 'bool' .                                    (rule 61)

	')'            reduce using rule 61
	','            reduce using rule 61
	'->'           reduce using rule 61
	L_Ident        reduce using rule 61
	%eof           reduce using rule 61


State 23

	Type -> 'int' .                                     (rule 62)

	')'            reduce using rule 62
	','            reduce using rule 62
	'->'           reduce using rule 62
	L_Ident        reduce using rule 62
	%eof           reduce using rule 62


State 24

	Exp7 -> Ident .                                     (rule 56)

	'&&'           reduce using rule 56
	'('            reduce using rule 56
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	'++'           reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'.'            reduce using rule 56
	'/'            reduce using rule 56
	'>'            reduce using rule 56
	'else'         reduce using rule 56
	'||'           reduce using rule 56
	'}'            reduce using rule 56
	%eof           reduce using rule 56


State 25

	Exp7 -> Integer .                                   (rule 55)

	'&&'           reduce using rule 55
	'('            reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	'++'           reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'.'            reduce using rule 55
	'/'            reduce using rule 55
	'>'            reduce using rule 55
	'else'         reduce using rule 55
	'||'           reduce using rule 55
	'}'            reduce using rule 55
	%eof           reduce using rule 55


State 26

	Exp7 -> String .                                    (rule 57)

	'&&'           reduce using rule 57
	'('            reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	'++'           reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'.'            reduce using rule 57
	'/'            reduce using rule 57
	'>'            reduce using rule 57
	'else'         reduce using rule 57
	'||'           reduce using rule 57
	'}'            reduce using rule 57
	%eof           reduce using rule 57


State 27

	%start_pExp7 -> Exp7 .                              (rule 15)

	%eof           accept


State 28

	Exp7 -> '(' . Exp ')'                               (rule 60)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'<'            shift, and enter state 48
	'false'        shift, and enter state 29
	'if'           shift, and enter state 49
	'lambda'       shift, and enter state 50
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp            goto state 86
	Exp1           goto state 47
	Exp2           goto state 45
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 29

	Exp7 -> 'false' .                                   (rule 59)

	'&&'           reduce using rule 59
	'('            reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	'++'           reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'.'            reduce using rule 59
	'/'            reduce using rule 59
	'>'            reduce using rule 59
	'else'         reduce using rule 59
	'||'           reduce using rule 59
	'}'            reduce using rule 59
	%eof           reduce using rule 59


State 30

	Exp7 -> 'true' .                                    (rule 58)

	'&&'           reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	'++'           reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'.'            reduce using rule 58
	'/'            reduce using rule 58
	'>'            reduce using rule 58
	'else'         reduce using rule 58
	'||'           reduce using rule 58
	'}'            reduce using rule 58
	%eof           reduce using rule 58


State 31

	Integer -> L_integ .                                (rule 18)

	'&&'           reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'*'            reduce using rule 18
	'+'            reduce using rule 18
	'++'           reduce using rule 18
	','            reduce using rule 18
	'-'            reduce using rule 18
	'.'            reduce using rule 18
	'/'            reduce using rule 18
	'>'            reduce using rule 18
	'else'         reduce using rule 18
	'||'           reduce using rule 18
	'}'            reduce using rule 18
	%eof           reduce using rule 18


State 32

	String -> L_quoted .                                (rule 19)

	'&&'           reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	'++'           reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'.'            reduce using rule 19
	'/'            reduce using rule 19
	'>'            reduce using rule 19
	'else'         reduce using rule 19
	'||'           reduce using rule 19
	'}'            reduce using rule 19
	%eof           reduce using rule 19


State 33

	%start_pExp6 -> Exp6 .                              (rule 14)

	%eof           accept


State 34

	Exp6 -> Exp7 . '(' ListExp ')'                      (rule 53)
	Exp6 -> Exp7 .                                      (rule 54)

	'&&'           reduce using rule 54
	'('            shift, and enter state 85
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	'++'           reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'.'            reduce using rule 54
	'/'            reduce using rule 54
	'>'            reduce using rule 54
	'else'         reduce using rule 54
	'||'           reduce using rule 54
	'}'            reduce using rule 54
	%eof           reduce using rule 54


State 35

	%start_pExp5 -> Exp5 .                              (rule 13)
	Exp5 -> Exp5 . '*' Exp6                             (rule 50)
	Exp5 -> Exp5 . '/' Exp6                             (rule 51)

	'*'            shift, and enter state 83
	'/'            shift, and enter state 84
	%eof           accept


State 36

	Exp5 -> Exp6 .                                      (rule 52)

	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	'++'           reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'.'            reduce using rule 52
	'/'            reduce using rule 52
	'>'            reduce using rule 52
	'else'         reduce using rule 52
	'||'           reduce using rule 52
	'}'            reduce using rule 52
	%eof           reduce using rule 52


State 37

	%start_pExp4 -> Exp4 .                              (rule 12)
	Exp4 -> Exp4 . '++' Exp5                            (rule 46)
	Exp4 -> Exp4 . '+' Exp5                             (rule 47)
	Exp4 -> Exp4 . '-' Exp5                             (rule 48)

	'+'            shift, and enter state 80
	'++'           shift, and enter state 81
	'-'            shift, and enter state 82
	%eof           accept


State 38

	Exp4 -> Exp5 .                                      (rule 49)
	Exp5 -> Exp5 . '*' Exp6                             (rule 50)
	Exp5 -> Exp5 . '/' Exp6                             (rule 51)

	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            shift, and enter state 83
	'+'            reduce using rule 49
	'++'           reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'.'            reduce using rule 49
	'/'            shift, and enter state 84
	'>'            reduce using rule 49
	'else'         reduce using rule 49
	'||'           reduce using rule 49
	'}'            reduce using rule 49
	%eof           reduce using rule 49


State 39

	%start_pExp3 -> Exp3 .                              (rule 11)

	%eof           accept


State 40

	Exp3 -> Exp4 .                                      (rule 45)
	Exp4 -> Exp4 . '++' Exp5                            (rule 46)
	Exp4 -> Exp4 . '+' Exp5                             (rule 47)
	Exp4 -> Exp4 . '-' Exp5                             (rule 48)

	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'+'            shift, and enter state 80
	'++'           shift, and enter state 81
	','            reduce using rule 45
	'-'            shift, and enter state 82
	'.'            reduce using rule 45
	'>'            reduce using rule 45
	'else'         reduce using rule 45
	'||'           reduce using rule 45
	'}'            reduce using rule 45
	%eof           reduce using rule 45


State 41

	Exp3 -> '!' . Exp3                                  (rule 44)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp3           goto state 79
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 42

	%start_pExp2 -> Exp2 .                              (rule 10)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 42)

	'&&'           shift, and enter state 78
	%eof           accept


State 43

	Exp2 -> Exp3 .                                      (rule 43)

	'&&'           reduce using rule 43
	')'            reduce using rule 43
	','            reduce using rule 43
	'.'            reduce using rule 43
	'>'            reduce using rule 43
	'else'         reduce using rule 43
	'||'           reduce using rule 43
	'}'            reduce using rule 43
	%eof           reduce using rule 43


State 44

	%start_pExp1 -> Exp1 .                              (rule 9)
	Exp1 -> Exp1 . '||' Exp2                            (rule 40)

	'||'           shift, and enter state 77
	%eof           accept


State 45

	Exp1 -> Exp2 .                                      (rule 41)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 42)

	'&&'           shift, and enter state 78
	')'            reduce using rule 41
	','            reduce using rule 41
	'.'            reduce using rule 41
	'>'            reduce using rule 41
	'else'         reduce using rule 41
	'||'           reduce using rule 41
	'}'            reduce using rule 41
	%eof           reduce using rule 41


State 46

	%start_pExp -> Exp .                                (rule 8)

	%eof           accept


State 47

	Exp -> Exp1 .                                       (rule 39)
	Exp1 -> Exp1 . '||' Exp2                            (rule 40)

	')'            reduce using rule 39
	','            reduce using rule 39
	'.'            reduce using rule 39
	'>'            reduce using rule 39
	'else'         reduce using rule 39
	'||'           shift, and enter state 77
	'}'            reduce using rule 39
	%eof           reduce using rule 39


State 48

	Exp -> '<' . Exp '.' Exp '>'                        (rule 36)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'<'            shift, and enter state 48
	'false'        shift, and enter state 29
	'if'           shift, and enter state 49
	'lambda'       shift, and enter state 50
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp            goto state 76
	Exp1           goto state 47
	Exp2           goto state 45
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 49

	Exp -> 'if' . '(' Exp ')' 'then' Exp 'else' Exp     (rule 38)

	'('            shift, and enter state 75


State 50

	Exp -> 'lambda' . ListDecl '->' Exp                 (rule 37)

	'('            shift, and enter state 20
	'->'           reduce using rule 25
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23

	Decl           goto state 57
	ListDecl       goto state 74
	Type           goto state 59

State 51

	%start_pListType -> ListType .                      (rule 7)

	%eof           accept


State 52

	ListType -> Type .                                  (rule 34)
	ListType -> Type . '->' ListType                    (rule 35)

	')'            reduce using rule 34
	'->'           shift, and enter state 73
	%eof           reduce using rule 34


State 53

	ListIdent -> Ident .                                (rule 31)
	ListIdent -> Ident . ',' ListIdent                  (rule 32)

	','            shift, and enter state 72
	%eof           reduce using rule 31


State 54

	%start_pListIdent -> ListIdent .                    (rule 6)

	%eof           accept


State 55

	%start_pListExp -> ListExp .                        (rule 5)

	%eof           accept


State 56

	ListExp -> Exp .                                    (rule 29)
	ListExp -> Exp . ',' ListExp                        (rule 30)

	')'            reduce using rule 29
	','            shift, and enter state 71
	%eof           reduce using rule 29


State 57

	ListDecl -> Decl .                                  (rule 26)
	ListDecl -> Decl . ',' ListDecl                     (rule 27)

	')'            reduce using rule 26
	','            shift, and enter state 70
	'->'           reduce using rule 26
	%eof           reduce using rule 26


State 58

	%start_pListDecl -> ListDecl .                      (rule 4)

	%eof           accept


State 59

	Decl -> Type . Ident                                (rule 22)

	L_Ident        shift, and enter state 18

	Ident          goto state 69

State 60

	ListFunction -> Function . ListFunction             (rule 24)

	'('            shift, and enter state 20
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23
	%eof           reduce using rule 23

	Function       goto state 60
	ListFunction   goto state 68
	Type           goto state 62

State 61

	%start_pListFunction -> ListFunction .              (rule 3)

	%eof           accept


State 62

	Function -> Type . Ident '(' ListDecl ')' '{' Exp '}'    (rule 21)

	L_Ident        shift, and enter state 18

	Ident          goto state 67

State 63

	%start_pDecl -> Decl .                              (rule 2)

	%eof           accept


State 64

	%start_pFunction -> Function .                      (rule 1)

	%eof           accept


State 65

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 66

	Program -> ListFunction .                           (rule 20)

	%eof           reduce using rule 20


State 67

	Function -> Type Ident . '(' ListDecl ')' '{' Exp '}'    (rule 21)

	'('            shift, and enter state 105


State 68

	ListFunction -> Function ListFunction .             (rule 24)

	%eof           reduce using rule 24


State 69

	Decl -> Type Ident .                                (rule 22)

	')'            reduce using rule 22
	','            reduce using rule 22
	'->'           reduce using rule 22
	%eof           reduce using rule 22


State 70

	ListDecl -> Decl ',' . ListDecl                     (rule 27)

	'('            shift, and enter state 20
	')'            reduce using rule 25
	'->'           reduce using rule 25
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23
	%eof           reduce using rule 25

	Decl           goto state 57
	ListDecl       goto state 104
	Type           goto state 59

State 71

	ListExp -> Exp ',' . ListExp                        (rule 30)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	')'            reduce using rule 28
	'<'            shift, and enter state 48
	'false'        shift, and enter state 29
	'if'           shift, and enter state 49
	'lambda'       shift, and enter state 50
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32
	%eof           reduce using rule 28

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	ListExp        goto state 103
	Exp            goto state 56
	Exp1           goto state 47
	Exp2           goto state 45
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 72

	ListIdent -> Ident ',' . ListIdent                  (rule 32)

	L_Ident        shift, and enter state 18

	Ident          goto state 53
	ListIdent      goto state 102

State 73

	ListType -> Type '->' . ListType                    (rule 35)

	'('            shift, and enter state 20
	')'            reduce using rule 33
	'String'       shift, and enter state 21
	'bool'         shift, and enter state 22
	'int'          shift, and enter state 23
	%eof           reduce using rule 33

	ListType       goto state 101
	Type           goto state 52

State 74

	Exp -> 'lambda' ListDecl . '->' Exp                 (rule 37)

	'->'           shift, and enter state 100


State 75

	Exp -> 'if' '(' . Exp ')' 'then' Exp 'else' Exp     (rule 38)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'<'            shift, and enter state 48
	'false'        shift, and enter state 29
	'if'           shift, and enter state 49
	'lambda'       shift, and enter state 50
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp            goto state 99
	Exp1           goto state 47
	Exp2           goto state 45
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 76

	Exp -> '<' Exp . '.' Exp '>'                        (rule 36)

	'.'            shift, and enter state 98


State 77

	Exp1 -> Exp1 '||' . Exp2                            (rule 40)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp2           goto state 97
	Exp3           goto state 43
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 78

	Exp2 -> Exp2 '&&' . Exp3                            (rule 42)

	'!'            shift, and enter state 41
	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp3           goto state 96
	Exp4           goto state 40
	Exp5           goto state 38
	Exp6           goto state 36
	Exp7           goto state 34

State 79

	Exp3 -> '!' Exp3 .                                  (rule 44)

	'&&'           reduce using rule 44
	')'            reduce using rule 44
	','            reduce using rule 44
	'.'            reduce using rule 44
	'>'            reduce using rule 44
	'else'         reduce using rule 44
	'||'           reduce using rule 44
	'}'            reduce using rule 44
	%eof           reduce using rule 44


State 80

	Exp4 -> Exp4 '+' . Exp5                             (rule 47)

	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp5           goto state 95
	Exp6           goto state 36
	Exp7           goto state 34

State 81

	Exp4 -> Exp4 '++' . Exp5                            (rule 46)

	'('            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Exp5           goto state 94
	Exp6           goto state 36
	Exp7           goto state 34

State 82

	Exp4 -> Exp4 '-' . Exp5                             (rule 48)
